--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>My Portfolio</title>
 </head>
 
+<!DOCTYPE html>
+<html>
+<head> 
+    <link rel="stylesheet" href="styles.css">
+</head> 
+</body>
+</html>
+
+
 <body>
     <H1>
         My Portfolio
