--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head> 
 </body>
 </html>
