--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <H1>
         My Portfolio
     </H1>
+    <h2>Welcome, all. My name is Brenda Cabrera-Santiago</h2>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
