Paragraph and hr tags

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         My Portfolio
     </H1>
     <h2>Welcome, all. My name is Brenda Cabrera-Santiago</h2>
+    <h3>I am a Software Developer.</h3>
+    <hr> 
+    <P>I am entirely new to the world of programming but am entirely fascinated
+      but the limitless opportunities it offers. I can't wait to see what I
+      can create.
+    </P>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
