About me updates

--- a/index.html
+++ b/index.html
@@ -17,16 +17,39 @@
 
 
 <body>
-    <H1>
+    <h1>
         My Portfolio
-    </H1>
-    <h2>Welcome, all. My name is Brenda Cabrera-Santiago</h2>
-    <h3>I am a Software Developer.</h3>
+    </h1>
+    <h1>Brenda Cabrera-Santiago</h1>
+    <h2>Software Developer.</h2>
     <hr> 
-    <P>I am entirely new to the world of programming but am entirely fascinated
-      but the limitless opportunities it offers. I can't wait to see what I
-      can create.
+    <P>I am entirely new to the world of programming, but am thoroughly fascinated
+      by the limitless opportunities it offers. I can't wait to see what I
+      can create and the lengths this path can take me.
     </P>
+    <h2>My Projects</h2>
+    <p>Coming Soon</p>
+    <h2>About Me.</h2>
+      <p>Aside from programming, I enjoy painting. I've always been a
+        creative person growing up. I discovered my talent of painting in 10th
+        grade when I took the elective in high school. Since then, I've painted 3
+        very large-scale portraits of famous music artists I admire. I was able to
+        gift two of them to them personally.
+
+        If I couldt have one super power, it would have to be teleportation.
+        I would visit my favorite places and dream destinations.
+        My goal is to visit 
+        <ol>
+          <li>Japan</li>
+          <li>New Zealand</li>
+          <li>Argentina</li>
+          <li>Jaimaca</li>
+        </ol>
+        The list could go on and on!
+    
+  </p>
+       
+
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
