--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <link rel="stylesheet" href="./css/styles.css">
+<div>
+  <link rel="stylesheet" href="./css/styles.css">
 </head> 
 </body>
 </html>
@@ -27,9 +28,13 @@
       by the limitless opportunities it offers. I can't wait to see what I
       can create and the lengths this path can take me.
     </P>
-    <h2>My Projects</h2>
-    <p>Coming Soon</p>
-    <h2>About Me.</h2>
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+      officia deserunt mollit anim id est laborum.</p>
       <p>Aside from programming, I enjoy painting. I've always been a
         creative person growing up. I discovered my talent of painting in 10th
         grade when I took the elective in high school. Since then, I've painted 3
@@ -45,9 +50,19 @@
           <li>Argentina</li>
           <li>Jaimaca</li>
         </ol>
-        The list could go on and on!
-    
+        The list could go on and on! 
   </p>
+  <h3>My Projects</h3>
+  <ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+  </ul>
+  <h3>Contact Me</h3>
+  <p>Phone: (212) 120-4720</p>
+  <a href="mailto:brecab@gmail.com"> E-mail</a>
+  </body>
+</div>
        
 
     <!-- 
