--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
     <li>Project 3</li>
   </ul>
   <h3>Contact Me</h3>
+  <div class="Contact-Section">
   <p>Phone: (212) 120-4720</p>
   <a href="mailto:brecab@gmail.com"> E-mail</a>
+</div>
   </body>
 </div>
        
