--- a/index.html
+++ b/index.html
@@ -41,15 +41,24 @@
         very large-scale portraits of famous music artists I admire. I was able to
         gift two of them to them personally.
 
-        If I couldt have one super power, it would have to be teleportation.
+        If I could have one super power, it would have to be teleportation.
         I would visit my favorite places and dream destinations.
         My goal is to visit 
-        <ol>
+        <div class="Destinations">
+          <ol>
           <li>Japan</li>
+          <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/00/02/a0002780/img/basic/a0002780_main.jpg"> 
+           <p>Tokyo, Japan</p>
           <li>New Zealand</li>
+          <img src="https://duhocnamphong.vn/images/news/2020/03/original/cong-vien-quoc-gia-new-zealand_1585645105.jpg">
+          <p>New Zealand</p>
           <li>Argentina</li>
-          <li>Jaimaca</li>
-        </ol>
+          <img src="https://a.storyblok.com/f/53624/4096x1260/5d1bd05116/argentina_4096x1260.jpg">
+          <p>Argentina</p>
+          <li>Jamaica</li>
+          <img src="https://cdn.sandals.com/sandals/v11/slideshows/resorts/src/media/large/slide-07.jpg">
+          <p>Jamaica</p>
+        </ol> </div>
         The list could go on and on! 
   </p>
   <h3>My Projects</h3>
