--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         My Portfolio
     </h1>
     <h1>Brenda Cabrera-Santiago</h1>
-    <h2>Software Developer.</h2>
+    <h2>Software Developer</h2>
     <hr> 
     <P>I am entirely new to the world of programming, but am thoroughly fascinated
       by the limitless opportunities it offers. I can't wait to see what I
@@ -43,8 +43,7 @@
 
         If I could have one super power, it would have to be teleportation.
         I would visit my favorite places and dream destinations.
-        My goal is to visit 
-        <div class="Destinations">
+        <p> My goal is to visit:</p>
           <ol>
           <li>Japan</li>
           <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/00/02/a0002780/img/basic/a0002780_main.jpg"> 
@@ -58,7 +57,7 @@
           <li>Jamaica</li>
           <img src="https://cdn.sandals.com/sandals/v11/slideshows/resorts/src/media/large/slide-07.jpg">
           <p>Jamaica</p>
-        </ol> </div>
+        </ol> 
         The list could go on and on! 
   </p>
   <h3>My Projects</h3>
