--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Software Developer</h2>
     <hr> 
     <P>I am entirely new to the world of programming, but am thoroughly fascinated
-      by the limitless opportunities it offers. I can't wait to see what I
+      by the limitless opportunities it offers which has to be my favorite thing about it. I can't wait to see what I
       can create and the lengths this path can take me.
     </P>
     <h2>About Me</h2>
