--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 
 <!DOCTYPE html>
+<hyml>
+  <head> 
+    <style>
+    .grab {cursor: -webkit- grab; cursor: grab;}
+  </style></head>
+  <body>
+
+<!DOCTYPE html>
 <html>
 <head> 
+  <style>
+    .grab {cursor: -webkit- grab; cursor: grab;}
+  </style>
 <div>
   <link rel="stylesheet" href="./css/styles.css">
 </head> 
