--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 <!DOCTYPE html>
 <html>
 <head> 
-  <style>
-    .grab {cursor: -webkit- grab; cursor: grab;}
-  </style>
 <div>
   <link rel="stylesheet" href="./css/styles.css">
 </head> 
 </body>
 </html>
 
+<!DOCTYPE html>
+<hyml>
+  <head> 
+    <style>
+    .grab {cursor: -webkit- grab; cursor: grab;}
+  </style></head>
+  <body>
 
 <body>
     <h1>
