--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
 </head>
-
 <!DOCTYPE html>
-<hyml>
-  <head> 
+<html>
+  <body> 
     <style>
     .grab {cursor: -webkit- grab; cursor: grab;}
-  </style></head>
-  <body>
+  </style>
+  </body>
+    </html>
 
 <!DOCTYPE html>
 <html>
@@ -23,15 +23,6 @@
 </head> 
 </body>
 </html>
-
-<!DOCTYPE html>
-<hyml>
-  <head> 
-    <style>
-    .grab {cursor: -webkit- grab; cursor: grab;}
-  </style></head>
-  <body>
-
 <body>
     <h1>
         My Portfolio
@@ -49,7 +40,33 @@
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
       nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-      officia deserunt mollit anim id est laborum.</p>
+      officia deserunt mollit anim id est laborum. 
+      <p>In other words: 
+        <h1>I'm baby</h1>
+        jOMO laborum minim tattooed nostrud pickled scenester gluten-free 
+        chartreuse tofu. Ut brunch flannel cred, venmo beard duis mumblecore deep v. Brunch tattooed 
+        waistcoat fixie iPhone helvetica. Wayfarers raw denim franzen veniam tattooed yes plz. Irony 
+        viral salvia banjo locavore chia. Yes plz ut ramps synth listicle anim laborum, gochujang DSA 
+        ugh everyday carry meditation godard lyft. Kickstarter id 3 wolf moon in celiac quinoa. Dolor 
+        biodiesel exercitation adipisicing. Keffiyeh yr man braid gentrify whatever try-hard sartorial 
+        sunt tacos. Venmo mukbang deserunt edison bulb. Marfa culpa woke, nisi heirloom laboris PBR&B
+        letterpress eiusmod dolor gastropub artisan williamsburg aliquip. Poke cardigan exercitation, 
+        cred bushwick dreamcatcher next level direct trade DIY flannel literally kickstarter austin 
+        humblebrag in. Minim blue bottle tilde hella XOXO mlkshk selfies et ugh master cleanse next 
+        level cliche taiyaki biodiesel franzen. Echo park cornhole yr commodo beard tempor enamel pin 
+        thundercats cupidatat literally. Anim crucifix asymmetrical selvage, flexitarian godard tousled
+        butcher cardigan pop-up iPhone consectetur aesthetic shabby chic. Activated charcoal adaptogen 
+        hammock cloud bread. Blue bottle craft beer in, distillery subway tile tbh vaporware venmo 
+        reprehenderit live-edge knausgaard yr narwhal.Vibecession raw denim 90's semiotics tumblr ea edison 
+        bulb small batch labore crucifix deep v quinoa. Williamsburg yr wayfarers chambray man braid. 
+        Heirloom +1 raclette tempor occaecat woke viral snackwave godard messenger bag bitters elit. 
+        In praxis blog sus cliche banjo gatekeep yr. Heirloom ut DSA, qui church-key yes plz you 
+        probably haven't heard of them enamel pin four loko magna est. Beard affogato tattooed dolore 
+        crucifix, DIY poutine wayfarers shaman keffiyeh echo park church-key. Single-origin coffee pop-up 
+        taxidermy tofu adaptogen aute. Messenger bag pug next level kale chips williamsburg. Ugh excepteur 
+        woke swag cliche four dollar toast quinoa crucifix normcore Brooklyn vaporware laboris ut aliqua. 
+        Commodo sunt DSA ad, paleo ascot enamel pin tonx mukbang tote bag. Authentic JOMO sus occaecat 
+       crucifix pok pok hashtag. </p>
       <p>Aside from programming, I enjoy painting. I've always been a
         creative person growing up. I discovered my talent of painting in 10th
         grade when I took the elective in high school. Since then, I've painted 3
@@ -61,18 +78,18 @@
         <p> My goal is to visit:</p>
           <ol>
           <li>Japan</li>
-          <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/00/02/a0002780/img/basic/a0002780_main.jpg"> 
-           <p>Tokyo, Japan</p>
+          <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/00/02/a0002780/img/basic/a0002780_main.jpg" 
+          alt="Japan"> 
           <li>New Zealand</li>
-          <img src="https://duhocnamphong.vn/images/news/2020/03/original/cong-vien-quoc-gia-new-zealand_1585645105.jpg">
-          <p>New Zealand</p>
+          <img src="https://duhocnamphong.vn/images/news/2020/03/original/cong-vien-quoc-gia-new-zealand_1585645105.jpg"
+          alt="New Zealand">
           <li>Argentina</li>
-          <img src="https://a.storyblok.com/f/53624/4096x1260/5d1bd05116/argentina_4096x1260.jpg">
-          <p>Argentina</p>
+          <img src="https://a.storyblok.com/f/53624/4096x1260/5d1bd05116/argentina_4096x1260.jpg" 
+          alt="Argentina">
           <li>Jamaica</li>
-          <img src="https://cdn.sandals.com/sandals/v11/slideshows/resorts/src/media/large/slide-07.jpg">
-          <p>Jamaica</p>
-        </ol> 
+          <img src="https://cdn.sandals.com/sandals/v11/slideshows/resorts/src/media/large/slide-07.jpg" 
+          alt="Jamaica">
+      </ol> 
         The list could go on and on! 
   </p>
   <h3>My Projects</h3>
