--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
           <ol>
           <li>Japan</li>
           <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/00/02/a0002780/img/basic/a0002780_main.jpg" 
-          alt="Japan"> 
+          alt="Japan" style="border:5px solid white "> 
           <li>New Zealand</li>
           <img src="https://duhocnamphong.vn/images/news/2020/03/original/cong-vien-quoc-gia-new-zealand_1585645105.jpg"
-          alt="New Zealand">
+          alt="New Zealand" style="border:5px dotted white">
           <li>Argentina</li>
           <img src="https://a.storyblok.com/f/53624/4096x1260/5d1bd05116/argentina_4096x1260.jpg" 
-          alt="Argentina">
+          alt="Argentina" style="border: 5px solid white">
           <li>Jamaica</li>
           <img src="https://cdn.sandals.com/sandals/v11/slideshows/resorts/src/media/large/slide-07.jpg" 
-          alt="Jamaica">
+          alt="Jamaica" style="border: 5px dotted white">
       </ol> 
         The list could go on and on! 
   </p>
